--- a/index.html
+++ b/index.html
@@ -9846,8 +9846,17 @@ var _user$project$SearchBar$view = function (model) {
 									_0: _elm_lang$html$Html_Attributes$class('button-hotel'),
 									_1: {
 										ctor: '::',
-										_0: _elm_lang$html$Html_Events$onClick(_user$project$Models$FetchHotels),
-										_1: {ctor: '[]'}
+										_0: _elm_lang$html$Html_Attributes$style(
+											{
+												ctor: '::',
+												_0: {ctor: '_Tuple2', _0: 'margin', _1: 'auto'},
+												_1: {ctor: '[]'}
+											}),
+										_1: {
+											ctor: '::',
+											_0: _elm_lang$html$Html_Events$onClick(_user$project$Models$FetchHotels),
+											_1: {ctor: '[]'}
+										}
 									}
 								}
 							},
